POWR-428 add missing group info page view and configure teaser.

--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -18,13 +18,13 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_body:
     type: paragraphs
-    weight: 1
+    weight: 2
     settings:
       title: paragraph
       title_plural: paragraphs
@@ -41,12 +41,17 @@ content:
     third_party_settings: {  }
     region: content
   field_summary:
-    weight: 26
+    weight: 1
     settings:
-      size: 60
+      rows: 2
       placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
+    type: string_textarea
     region: content
   moderation_state:
     type: moderation_state_default
@@ -64,7 +69,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 5
     region: content
     third_party_settings: {  }
   scheduled_publication:
@@ -84,7 +89,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 5
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
@@ -97,7 +102,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
