--- a/web/sites/default/config/views.view.group_information.yml
+++ b/web/sites/default/config/views.view.group_information.yml
@@ -1,4 +1,4 @@
-uuid: 8448f6f1-b19e-4baa-b889-0861cf0cab06
+uuid: a0520f56-2c7e-4d4c-8560-bddc24f914ae
 langcode: en
 status: true
 dependencies:
@@ -10,8 +10,8 @@ dependencies:
     - group
     - node
     - user
-id: group_news
-label: 'Group news'
+id: group_information
+label: 'Group information'
 module: views
 description: 'A set of views to help show news that are related to a group.'
 tag: ''
@@ -159,22 +159,21 @@ display:
             operator: ''
           group: 1
       sorts:
-        changed:
-          id: changed
+        title:
+          id: title
           table: node_field_data
-          field: changed
+          field: title
           relationship: none
           group_type: group
           admin_label: ''
-          order: DESC
+          order: ASC
           exposed: false
           expose:
             label: ''
-          granularity: second
           entity_type: node
-          entity_field: changed
-          plugin_id: date
-      title: News
+          entity_field: title
+          plugin_id: standard
+      title: Information
       header: {  }
       footer: {  }
       empty: {  }
@@ -188,11 +187,16 @@ display:
           admin_label: 'Content group content'
           required: true
           group_content_plugins:
-            'group_node:news': 'group_node:news'
+            'group_node:information': 'group_node:information'
+            'group_node:alert': '0'
             'group_node:building': '0'
             'group_node:city_service': '0'
-            'group_node:information': '0'
+            'group_node:event': '0'
+            'group_node:guide': '0'
+            'group_node:news': '0'
+            'group_node:notification': '0'
             'group_node:service_location': '0'
+            'group_node:top_search': '0'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
         gid:
@@ -255,25 +259,6 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
-  block_1:
-    display_plugin: block
-    id: block_1
-    display_title: Block
-    position: 1
-    display_options:
-      display_extenders: {  }
-      block_description: 'Group news'
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - url.query_args
-        - 'user.node_grants:view'
-        - user.permissions
-      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
@@ -281,7 +266,7 @@ display:
     position: 2
     display_options:
       display_extenders: {  }
-      path: group/%group/news
+      path: group/%group/information
       filters:
         status:
           value: '1'
@@ -602,17 +587,7 @@ display:
           separator: ''
           field_api_classes: false
           plugin_id: field
-      header:
-        result:
-          id: result
-          table: views
-          field: result
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          content: '@total news articles found'
-          plugin_id: result
+      header: {  }
     cache_metadata:
       max-age: -1
       contexts:
