--- a/web/sites/default/config/core.entity_view_display.node.information.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.teaser.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.information.field_body
+    - field.field.node.information.field_legacy_path
+    - field.field.node.information.field_summary
     - node.type.information
   module:
     - ds
@@ -25,12 +27,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:node'
         - node_title
+        - field_summary
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         settings:
@@ -43,11 +45,20 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-      'bundle_field:node':
-        plugin_id: 'bundle_field:node'
-        weight: 0
-        label: hidden
-        formatter: default
+id: node.information.teaser
+targetEntityType: node
+bundle: information
+mode: teaser
+content:
+  field_summary:
+    type: string
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings:
+      ds:
         ft:
           id: expert
           settings:
@@ -56,34 +67,28 @@ third_party_settings:
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
-            ow: true
             ow-el: ''
-            ow-cl: 'text-muted align-right'
+            ow-cl: ''
             ow-at: ''
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi-el: ''
+            fi: true
+            fi-el: p
             fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
             lb-col: false
+            ow: false
             ow-def-at: false
             ow-def-cl: false
             fis: false
             fis-def-at: false
-            fi: false
             fi-def-at: false
-id: node.information.teaser
-targetEntityType: node
-bundle: information
-mode: teaser
-content: {  }
 hidden:
   content_moderation_control: true
   field_body: true
   field_legacy_path: true
-  field_summary: true
   links: true
   scheduled_publication: true
