--- a/web/sites/default/config/core.entity_view_display.media.document.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.teaser.yml
@@ -10,6 +10,7 @@ dependencies:
     - media.type.document
   module:
     - ds
+    - file
 third_party_settings:
   ds:
     layout:
@@ -22,6 +23,7 @@ third_party_settings:
       content:
         - name
         - field_summary
+        - field_document
 _core:
   default_config_hash: 4tgcXj_iKv9Fw3xmONUfCHKqO7OeOa11qVesruN4k4k
 id: media.document.teaser
@@ -29,6 +31,14 @@ targetEntityType: media
 bundle: document
 mode: teaser
 content:
+  field_document:
+    type: file_default
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      use_description_as_link_text: true
+    third_party_settings: {  }
   field_summary:
     weight: 1
     label: hidden
@@ -76,7 +86,6 @@ content:
 hidden:
   content_moderation_control: true
   created: true
-  field_document: true
   field_media_in_library: true
   thumbnail: true
   uid: true
