--- a/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
     - field.field.group.project.field_legacy_path
-    - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
@@ -26,7 +25,6 @@ third_party_settings:
       content:
         - 'bundle_field:group'
         - label
-        - field_summary
     fields:
       'bundle_field:group':
         plugin_id: 'bundle_field:group'
@@ -65,85 +63,21 @@ targetEntityType: group
 bundle: project
 mode: search_result
 content:
-  field_summary:
-    type: string
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
   label:
     label: hidden
     type: string
     weight: 1
     region: content
     settings:
-      link_to_entity: true
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: h3
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
   changed: true
   created: true
   field_audience: true
   field_date_time_range: true
   field_legacy_path: true
-  field_parent_group: true
   field_shortname_or_acronym: true
+  field_summary: true
   field_topics: true
   uid: true
