POWR-456 Update to latest version of Drupal & Lightning

--- a/web/sites/default/config/core.entity_form_display.media.video.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.media_browser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_form_mode.media.media_browser
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_transcript
     - media.type.video
   module:
     - content_moderation
@@ -45,7 +46,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   preview:
-    weight: null
+    weight: 101
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -59,4 +60,5 @@ content:
 hidden:
   created: true
   field_media_video_embed_field: true
+  field_transcript: true
   uid: true
