--- a/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
@@ -20,6 +20,8 @@ content:
   content_moderation_control:
     weight: -20
     region: content
+    settings: {  }
+    third_party_settings: {  }
   image:
     type: responsive_image
     weight: 0
@@ -30,7 +32,6 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
-  content_moderation_control: true
   created: true
   field_media_in_library: true
   name: true
