--- a/web/sites/default/config/core.entity_view_display.media.image.thumbnail.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.thumbnail.yml
@@ -17,6 +17,11 @@ targetEntityType: media
 bundle: image
 mode: thumbnail
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   image:
     type: image
     weight: 0
