--- a/web/sites/default/config/core.entity_view_display.node.alert.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.teaser.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.alert.field_action_link
     - field.field.node.alert.field_severity
     - field.field.node.alert.field_summary
     - node.type.alert
@@ -14,9 +15,17 @@ targetEntityType: node
 bundle: alert
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
+  field_action_link: true
   field_severity: true
   field_summary: true
