--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -4,7 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.event.field_all_day
+    - field.field.node.event.field_body
+    - field.field.node.event.field_end_date
+    - field.field.node.event.field_end_time
+    - field.field.node.event.field_event_location
+    - field.field.node.event.field_legacy_path
     - field.field.node.event.field_start_date
+    - field.field.node.event.field_start_time
+    - field.field.node.event.field_summary
     - node.type.event
   module:
     - user
@@ -16,15 +24,20 @@ content:
   content_moderation_control:
     weight: -20
     region: content
+    settings: {  }
+    third_party_settings: {  }
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_all_day: true
   field_body: true
   field_end_date: true
   field_end_time: true
   field_event_location: true
+  field_legacy_path: true
   field_start_date: true
   field_start_time: true
   field_summary: true
