--- a/web/sites/default/config/core.entity_view_display.node.notification.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.teaser.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.notification.field_action_link
+    - field.field.node.notification.field_notification_severity
+    - field.field.node.notification.field_summary
     - node.type.notification
   module:
     - user
@@ -12,9 +15,16 @@ targetEntityType: node
 bundle: notification
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_action_link: true
   field_notification_severity: true
