--- a/web/sites/default/config/core.entity_view_display.node.top_search.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.top_search.teaser.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.top_search.field_active_time_frame
     - field.field.node.top_search.field_search_link
     - node.type.top_search
   module:
@@ -16,6 +17,8 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_active_time_frame: true
   field_search_link: true
