--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -44,7 +44,7 @@ lightning_contact_form: 0.0.0
 lightning_core: 0.0.0
 lightning_landing_page: 0.0.0
 lightning_layout: 0.0.0
-lightning_media: 2.4.0
+lightning_media: 3.1.0
 lightning_media_bulk_upload: 0.0.0
 lightning_media_document: 0.0.0
 lightning_media_image: 0.0.0
@@ -55,7 +55,7 @@ lightning_page: 0.0.0
 lightning_roles: 0.0.0
 lightning_scheduler: 0.0.0
 lightning_search: 0.0.0
-lightning_workflow: 2.3.0
+lightning_workflow: 3.1.0
 link: 0.0.0
 media: 0.0.0
 media_entity_instagram: 0.0.0
@@ -100,7 +100,7 @@ menu_link_content: 0.0.0
 pathauto: 0.0.0
 views: 0.0.0
 paragraphs: 0.0.0
-lightning: 0.0.0
+lightning: 3.2.0
 telephone: 8.5.0
 address: 1.3.0
 eva: 1.3.0
@@ -158,3 +158,4 @@ google_analytics: 0.0.0
 config_filter: 1.3.0
 config_split: 1.4.0
 easy_breadcrumb: 1.8.0
+media_library: 8.6.1
