--- a/web/sites/default/config/core.entity_view_display.media.document.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.media_library.yml
@@ -1,22 +1,22 @@
-uuid: cb07a852-783c-46df-9ec3-f213a9102e63
+uuid: e9b1575c-9623-4e83-ba78-2da88e1254d0
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.thumbnail
+    - core.entity_view_mode.media.media_library
     - field.field.media.document.field_document
     - field.field.media.document.field_media_in_library
     - field.field.media.document.field_summary
-    - image.style.medium
+    - image.style.thumbnail
     - media.type.document
   module:
     - image
 _core:
-  default_config_hash: OzEIvaHbr3Z7UL0H31yPwdpg0MB3DNtkukWqvUS_QQQ
-id: media.document.thumbnail
+  default_config_hash: b2OT-HhPhS2sEoaHLM_9deYfXw2A37hxc0TwsahXsp4
+id: media.document.media_library
 targetEntityType: media
 bundle: document
-mode: thumbnail
+mode: media_library
 content:
   content_moderation_control:
     weight: -20
@@ -28,7 +28,7 @@ content:
     weight: 0
     label: hidden
     settings:
-      image_style: medium
+      image_style: thumbnail
       image_link: ''
     third_party_settings: {  }
     region: content
