POWR-438 Add no result message to projects and programs

--- a/web/sites/default/config/views.view.group_projects.yml
+++ b/web/sites/default/config/views.view.group_projects.yml
@@ -224,7 +224,20 @@ display:
       title: Projects
       header: {  }
       footer: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: 'No project found in this group.'
+            format: simple_editor
+          plugin_id: text
       relationships:
         field_parent_group:
           id: field_parent_group
