POWR-438 Adjust project block setting.

--- a/web/sites/default/config/block.block.views_block__group_projects_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_projects_block_1.yml
@@ -1,22 +1,22 @@
-uuid: f31dc3ac-931a-4091-9f67-a7bba5582176
+uuid: 278af0c3-4455-499e-b4c2-47225c673cbc
 langcode: en
 status: true
 dependencies:
   config:
-    - views.view.group_menu
+    - views.view.group_projects
   module:
-    - group
+    - ctools
     - views
   theme:
     - cloudy
-id: cloudy_views_block__group_menu_block_1
+id: views_block__group_projects_block_1
 theme: cloudy
 region: sidebar_second
-weight: -15
+weight: -13
 provider: null
-plugin: 'views_block:group_menu-block_1'
+plugin: 'views_block:group_projects-block_1'
 settings:
-  id: 'views_block:group_menu-block_1'
+  id: 'views_block:group_projects-block_1'
   label: ''
   provider: views
   label_display: visible
@@ -24,13 +24,11 @@ settings:
   items_per_page: none
   context_mapping: {  }
 visibility:
-  group_type:
-    id: group_type
-    group_types:
-      project: project
+  'entity_bundle:group':
+    id: 'entity_bundle:group'
+    bundles:
       bureau_office: bureau_office
       elected_official: elected_official
-      program: program
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
