--- a/web/sites/default/config/views.view.group_programs.yml
+++ b/web/sites/default/config/views.view.group_programs.yml
@@ -407,7 +407,9 @@ display:
           plugin_id: field
       defaults:
         fields: false
+        empty: false
       block_hide_empty: true
+      empty: {  }
     cache_metadata:
       max-age: -1
       contexts:
