--- a/web/sites/default/config/views.view.group_projects.yml
+++ b/web/sites/default/config/views.view.group_projects.yml
@@ -70,12 +70,9 @@ display:
         type: fields
       fields:
         label:
+          id: label
           table: groups_field_data
           field: label
-          id: label
-          entity_type: null
-          entity_field: label
-          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
@@ -112,7 +109,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -122,7 +119,8 @@ display:
           hide_alter_empty: true
           click_sort_column: value
           type: string
-          settings: {  }
+          settings:
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -133,6 +131,9 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: null
+          entity_field: label
+          plugin_id: field
         field_summary:
           id: field_summary
           table: group__field_summary
@@ -310,6 +311,75 @@ display:
           offset: 0
       defaults:
         pager: false
+        empty: false
+        fields: false
+      empty: {  }
+      fields:
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: null
+          entity_field: label
+          plugin_id: field
     cache_metadata:
       max-age: -1
       contexts:
@@ -317,8 +387,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
-      tags:
-        - 'config:field.storage.group.field_summary'
+      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
