--- a/web/sites/default/config/views.view.group_projects.yml
+++ b/web/sites/default/config/views.view.group_projects.yml
@@ -380,6 +380,7 @@ display:
           entity_type: null
           entity_field: label
           plugin_id: field
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
