--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
         "drupal/viewsreference": "^1.2",
+        "drupal/webform": "^5.0@RC",
         "drush/drush": "9.3.0",
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
