POWR-456 intial commit of updated site

--- a/web/sites/default/config/core.entity_view_display.media.video.thumbnail.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.thumbnail.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.media.thumbnail
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_transcript
     - image.style.medium
     - media.type.video
   module:
@@ -17,6 +18,11 @@ targetEntityType: media
 bundle: video
 mode: thumbnail
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   thumbnail:
     type: image
     weight: 0
@@ -30,5 +36,6 @@ hidden:
   created: true
   field_media_in_library: true
   field_media_video_embed_field: true
+  field_transcript: true
   name: true
   uid: true
