--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -89,8 +89,10 @@ module:
   media: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
+  media_library: 0
   menu_ui: 0
   metatag: 0
+  moderation_dashboard: 0
   node: 0
   openapi: 0
   openapi_ui: 0
