POWR-444 - Added Revert link to local tasks for View Revision route, rearranged local tasks, removed one of the patches that doesn't seem to be needed.

--- a/web/modules/custom/portland/modules/portland_revision_helper/portland_revision_helper.links.task.yml
+++ b/web/modules/custom/portland/modules/portland_revision_helper/portland_revision_helper.links.task.yml
@@ -6,8 +6,8 @@
 # https://www.drupal.org/docs/8/api/menu-api/providing-module-defined-local-tasks
 
 
-portland.entity.node.revision:
-  title: 'Edit Latest'
-  base_route: 'entity.node.revision'
-  route_name: 'view.group_media.page_1'
-  weight: 150
+node.revision_revert_confirm:
+  route_name: node.revision_revert_confirm
+  base_route: entity.node.canonical
+  title: 'Revert'
+  weight: 40
