POWR-413 Add form elements, css for submit, and setup permissions to form

--- a/web/sites/default/config/webform.webform.website_feedback.yml
+++ b/web/sites/default/config/webform.webform.website_feedback.yml
@@ -12,8 +12,8 @@ id: website_feedback
 title: 'Website feedback'
 description: 'This webform is used to gather website feedback from users and editors.'
 category: ''
-elements: null
-css: ''
+elements: "feedback:\n  '#type': textarea\n  '#title': 'How can we improve this site?'\n  '#required': true\nemail_address:\n  '#type': email\n  '#title': 'Email address'\n  '#description': 'If you&#39;d like to receive follow up from us, please enter your e-mail address.'\nsubject:\n  '#type': hidden\n  '#title': Subject\n  '#prepopulate': true\nip_address:\n  '#type': hidden\n  '#title': 'IP Address'\n  '#default_value': '[current-user:ip-address]'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#attributes':\n    class:\n      - 'd-flex justify-content-around'\n  '#submit__attributes':\n    class:\n      - w-50"
+css: 'd-flex justify-content-around'
 javascript: ''
 settings:
   ajax: false
@@ -87,9 +87,9 @@ settings:
   draft_auto_save: false
   draft_saved_message: ''
   draft_loaded_message: ''
-  confirmation_type: page
+  confirmation_type: inline
   confirmation_title: ''
-  confirmation_message: ''
+  confirmation_message: 'Thank you for submitting your feedback, we appreciate your help!'
   confirmation_url: ''
   confirmation_attributes: {  }
   confirmation_back: true
@@ -120,7 +120,8 @@ access:
     users: {  }
     permissions: {  }
   view_any:
-    roles: {  }
+    roles:
+      - administrator
     users: {  }
     permissions: {  }
   update_any:
@@ -128,11 +129,13 @@ access:
     users: {  }
     permissions: {  }
   delete_any:
-    roles: {  }
+    roles:
+      - administrator
     users: {  }
     permissions: {  }
   purge_any:
-    roles: {  }
+    roles:
+      - administrator
     users: {  }
     permissions: {  }
   view_own:
