POWR-444 incremental commit so I can switch stories.

--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.information.field_body
     - field.field.node.information.field_legacy_path
+    - field.field.node.information.field_revision_log_message
     - field.field.node.information.field_summary
     - node.type.information
   module:
@@ -55,6 +56,13 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
+  field_revision_log_message:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
     region: content
   field_summary:
     weight: 1
