--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.information.field_body
     - field.field.node.information.field_legacy_path
+    - field.field.node.information.field_revision_log_message
     - field.field.node.information.field_summary
     - node.type.information
   module:
@@ -39,6 +40,19 @@ content:
         collapse_edit_all: collapse_edit_all
         add_above: '0'
     third_party_settings: {  }
+    region: content
+  field_revision_log_message:
+    weight: 26
+    settings:
+      rows: 4
+      placeholder: ''
+    third_party_settings:
+      maxlength:
+        maxlength_js: null
+        maxlength_js_label: ''
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
+    type: string_textarea
     region: content
   field_summary:
     weight: 1
