--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -161,3 +161,4 @@ easy_breadcrumb: 1.8.0
 media_library: 8.6.1
 metatag_open_graph: 0.0.0
 metatag_twitter_cards: 0.0.0
+portland_revision_helper: 0.1.0
