POWR-413 Enable menu_token with default config

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -90,6 +90,7 @@ module:
   media_entity_instagram: 0
   media_entity_twitter: 0
   media_library: 0
+  menu_token: 0
   menu_ui: 0
   metatag: 0
   metatag_open_graph: 0
@@ -152,6 +153,7 @@ module:
   webform: 0
   webform_ui: 0
   workflows: 0
+  contribute: 1
   ds: 1
   extlink: 1
   menu_link_content: 1
