POWR-444 adjustments to the Diff config, only show visual/content changes.

--- a/web/sites/default/config/diff.plugins.yml
+++ b/web/sites/default/config/diff.plugins.yml
@@ -1,49 +1,32 @@
 fields:
   block_content:
     langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_created:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_user:
-      type: entity_reference_field_diff_builder
-      settings:
-        compare_entity_reference: 1
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     status:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     info:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     changed:
       type: hidden
       settings: {  }
     default_langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_default:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_translation_affected:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     scheduled_transition_date:
       type: core_field_diff_builder
       settings:
@@ -62,16 +45,11 @@ fields:
         markdown: drupal_html_to_text
   content_moderation_state:
     langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     uid:
-      type: entity_reference_field_diff_builder
-      settings:
-        compare_entity_reference: 1
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     workflow:
       type: entity_reference_field_diff_builder
       settings:
@@ -84,35 +62,23 @@ fields:
         show_header: 1
         markdown: drupal_html_to_text
     content_entity_type_id:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     content_entity_id:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     content_entity_revision_id:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     default_langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_default:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_translation_affected:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
   crop:
     langcode:
       type: hidden
@@ -151,21 +117,15 @@ fields:
       type: hidden
       settings: {  }
     scheduled_transition_date:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     scheduled_transition_state:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
   media:
     langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_created:
       type: hidden
       settings: {  }
@@ -179,31 +139,17 @@ fields:
       type: hidden
       settings: {  }
     name:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     thumbnail:
-      type: image_field_diff_builder
-      settings:
-        show_id: 0
-        compare_alt_field: 1
-        compare_title_field: 1
-        property_separator: nl
-        show_thumbnail: 1
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     uid:
-      type: entity_reference_field_diff_builder
-      settings:
-        compare_entity_reference: 1
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     created:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     changed:
       type: hidden
       settings: {  }
@@ -217,24 +163,14 @@ fields:
       type: hidden
       settings: {  }
     scheduled_transition_date:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     scheduled_transition_state:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     field_document:
-      type: file_field_diff_builder
-      settings:
-        show_id: 1
-        compare_description_field: 0
-        compare_display_field: 0
-        property_separator: nl
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     field_media_in_library:
       type: hidden
       settings: {  }
@@ -242,37 +178,21 @@ fields:
       type: hidden
       settings: {  }
     field_summary:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     field_transcript:
-      type: text_field_diff_builder
-      settings:
-        compare_format: 0
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     image:
-      type: image_field_diff_builder
-      settings:
-        show_id: 0
-        compare_alt_field: 1
-        compare_title_field: 1
-        property_separator: nl
-        show_thumbnail: 1
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
   node:
     langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_timestamp:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     status:
       type: core_field_diff_builder
       settings:
@@ -284,39 +204,26 @@ fields:
         show_header: 1
         markdown: drupal_html_to_text
     uid:
-      type: entity_reference_field_diff_builder
-      settings:
-        compare_entity_reference: 1
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     created:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     changed:
       type: hidden
       settings: {  }
     promote:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     sticky:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     default_langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_default:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_translation_affected:
       type: hidden
       settings: {  }
@@ -474,46 +381,31 @@ fields:
         markdown: drupal_html_to_text
   paragraph:
     langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     uid:
-      type: entity_reference_field_diff_builder
-      settings:
-        compare_entity_reference: 1
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     status:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     created:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     behavior_settings:
       type: core_field_diff_builder
       settings:
         show_header: 1
         markdown: drupal_html_to_text
     default_langcode:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_default:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     revision_translation_affected:
-      type: core_field_diff_builder
-      settings:
-        show_header: 1
-        markdown: drupal_html_to_text
+      type: hidden
+      settings: {  }
     scheduled_transition_date:
       type: core_field_diff_builder
       settings:
