POWR-444 restored the anonymous login settings that I had changed for testing

--- a/web/sites/default/config/anonymous_login.settings.yml
+++ b/web/sites/default/config/anonymous_login.settings.yml
@@ -1,5 +1,5 @@
 login_path: /user/login
 _core:
   default_config_hash: ZKVq7lpyGFQf-SCuj_Ng2yLPD24rKHxz-TzGQxBjLl4
-paths: ''
+paths: "~/openid-connect/azure\r\n~/sites/default/files/**\r\n*"
 message: 'Welcome to the closed alpha version of the new website platform for Portland, Oregon. Only city employees with an Office365 account may log in at this time.'
