POWR-458 Clean up config and reference path correctly Commented out coude would break config if un-commented

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -12,8 +12,8 @@ default:
       selenium2: ~
       # Must comment this out so it can be overriden by BEHAT_PARAMS
       # base_url: http://localhost
-      # behat.paths.base is the path with this config file
-      files_path: %behat.paths.base%/data/files
+      # paths.base is the path with this config file
+      files_path: %paths.base%/data/files
       sessions:
         default:
           goutte: ~
@@ -24,11 +24,6 @@ default:
     Drupal\DrupalExtension:
       api_driver: 'drush'
       blackbox: ~
-    #   api_driver: 'drupal'
-    #   drush:
-    #     alias: 'local'
-    #   drupal:
-    #     drupal_root: '/var/www/html/web'
       region_map:
         footer: "#footer"
       selectors:
