POWR-458 Make selectors more accurate for our theme

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -27,8 +27,8 @@ default:
       region_map:
         footer: "#footer"
       selectors:
-        message_selector: '.messages'
-        error_message_selector: '.messages.messages--error'
-        success_message_selector: '.messages.messages--status'
+        message_selector: '.alert'
+        error_message_selector: '.alert.alert-danger'
+        success_message_selector: '.alert.alert-success'
       drush:
         binary: drush
