POWR-458 Make files_path absolute on CircleCI

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -13,7 +13,7 @@ default:
       # Must comment this out so it can be overriden by BEHAT_PARAMS
       # base_url: http://localhost
       # paths.base is the path with this config file
-      files_path: %paths.base%/data/files
+      files_path: /var/www/html/tests/data/files
       sessions:
         default:
           goutte: ~
