POWR-413 Set subject default and disable prepopulate

--- a/web/sites/default/config/webform.webform.website_feedback.yml
+++ b/web/sites/default/config/webform.webform.website_feedback.yml
@@ -12,7 +12,7 @@ id: website_feedback
 title: 'Website feedback'
 description: 'This webform is used to gather website feedback from users and editors.'
 category: ''
-elements: "feedback:\n  '#type': textarea\n  '#title': 'How can we improve this site?'\n  '#required': true\nemail_address:\n  '#type': email\n  '#title': 'Email address'\n  '#description': 'If you&#39;d like to receive follow up from us, please enter your e-mail address.'\nsubject:\n  '#type': hidden\n  '#title': Subject\n  '#prepopulate': true\nip_address:\n  '#type': hidden\n  '#title': 'IP Address'\n  '#default_value': '[current-user:ip-address]'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#attributes':\n    class:\n      - 'd-flex justify-content-around'\n  '#submit__attributes':\n    class:\n      - w-50"
+elements: "feedback:\n  '#type': textarea\n  '#title': 'How can we improve this site?'\n  '#required': true\nemail_address:\n  '#type': email\n  '#title': 'Email address'\n  '#description': 'If you&#39;d like to receive follow up from us, please enter your e-mail address.'\nsubject:\n  '#type': hidden\n  '#title': Subject\n  '#default_value': '[server:HTTP_REFERER]'\nip_address:\n  '#type': hidden\n  '#title': 'IP Address'\n  '#default_value': '[current-user:ip-address]'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#attributes':\n    class:\n      - 'd-flex justify-content-around'\n  '#submit__attributes':\n    class:\n      - w-50"
 css: 'd-flex justify-content-around'
 javascript: ''
 settings:
