POWR-475 Add module field_permissions. Hide short name for non-admin

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
+        "drupal/field_permissions": "^1.0@RC",
         "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
         "drupal/hsts": "^1.0",
