--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -42,6 +42,7 @@ permissions:
   - 'view any unpublished content'
   - 'view city_service revisions'
   - 'view event revisions'
+  - 'view field_shortname_or_acronym'
   - 'view guide revisions'
   - 'view information revisions'
   - 'view latest version'
