--- a/web/sites/default/config/field.storage.group.field_shortname_or_acronym.yml
+++ b/web/sites/default/config/field.storage.group.field_shortname_or_acronym.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - group
+third_party_settings:
+  field_permissions:
+    permission_type: custom
 id: group.field_shortname_or_acronym
 field_name: field_shortname_or_acronym
 entity_type: group
