--- a/web/sites/default/config/user.role.anonymous.yml
+++ b/web/sites/default/config/user.role.anonymous.yml
@@ -10,5 +10,6 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'view field_shortname_or_acronym'
   - 'view media'
   - 'view search api pages'
