POWR-413 shift to a block and update the lanugage in the form.

--- a/web/sites/default/config/webform.webform.website_feedback.yml
+++ b/web/sites/default/config/webform.webform.website_feedback.yml
@@ -12,15 +12,15 @@ id: website_feedback
 title: 'Website feedback'
 description: 'This webform is used to gather website feedback from users and editors.'
 category: ''
-elements: "feedback:\n  '#type': textarea\n  '#title': 'How can we improve this site?'\n  '#required': true\nemail_address:\n  '#type': email\n  '#title': 'Email address'\n  '#description': 'If you&#39;d like to receive follow up from us, please enter your e-mail address.'\nsubject:\n  '#type': hidden\n  '#title': Subject\n  '#default_value': '[server:HTTP_REFERER]'\nip_address:\n  '#type': hidden\n  '#title': 'IP Address'\n  '#default_value': '[current-user:ip-address]'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#attributes':\n    class:\n      - 'd-flex justify-content-around'\n  '#submit__attributes':\n    class:\n      - w-50"
+elements: "page_you_last_viewed:\n  '#type': textfield\n  '#title': 'Page you last viewed'\n  '#description': 'You can change this address if you would rather comment on a different page.'\n  '#autocomplete': 'off'\n  '#default_value': '[server:HTTP_REFERER]'\nfeedback:\n  '#type': textarea\n  '#title': 'How can we improve?'\n  '#description': 'Be specific so we can make the site better.'\n  '#required': true\nemail_address:\n  '#type': email\n  '#title': 'Your email'\n  '#description': 'If you would like us to follow up with you, please enter your email address. (optional)'\nip_address:\n  '#type': hidden\n  '#title': 'IP Address'\n  '#default_value': '[current-user:ip-address]'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#attributes':\n    class:\n      - 'd-flex justify-content-around'\n  '#submit__attributes':\n    class:\n      - w-50"
 css: 'd-flex justify-content-around'
 javascript: ''
 settings:
   ajax: false
   ajax_scroll_top: form
   page: true
-  page_submit_path: ''
-  page_confirm_path: ''
+  page_submit_path: feedback
+  page_confirm_path: thank-you-for-feedback
   form_submit_once: false
   form_exception_message: ''
   form_open_message: ''
