POWR-498 Allow all users to see top search block.

--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -26,7 +26,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'access content overview'
+          perm: 'access content'
       cache:
         type: tag
       query:
